--- a/APIREST/cliente/src/app/vistas/api.html
+++ b/APIREST/cliente/src/app/vistas/api.html
@@ -64,9 +64,9 @@
 
     <h1>GESTOR GALERÍA</h1>
 
-    <form>
+    <form #formGalerias="ngForm" (ngSubmit)="nuevaFotoGaleria()">
 
-      <input type="file" required>
+      <input type="file" (change)="cargarFichero($event)" required>
 
       <input type="submit" value="Enviar">
 
